<resources>
    <string name="app_name">LaTeX IT</string>

    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_document_title">New Document</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="document_dialog_title">Document Options</string>
    <string name="rename_hint">Document Title</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="documents">Documents</string>
    <string name="save_document">Save Document</string>
    <string name="title">Title</string>
    <string name="modified">Modified:</string>
    <string name="date">Date</string>
    <string name="filetype">File type</string>
    <string name="back">Back</string>
    <string name="choose_file">Choose a file</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="compiling_error_title">Compiling Error</string>
    <string name="compiling_error_message">
        Latex compiling has failed.
        Do you wish to open the log?
    </string>
    <string name="about">About</string>
    <string name="open_source_title">Open Source Licenses</string>
    <string name="my_website"><a href="http://albertonicoletti.me" >albertonicoletti.me</a></string>
    <string name="my_twitter"><a href="https://twitter.com/albyxyz_" >@albyxyz_</a></string>
    <string name="github_editor"><a href="https://github.com/albyxyz/latex-editor" >Github Latex Editor</a></string>
    <string name="github_server"><a href="https://github.com/albyxyz/latex-server" >Github Latex Server</a></string>
    <string name="github_profile"><a href="https://github.com/albyxyz" >albyxyz</a></string>
    <string name="my_mail"><a href="mailto:albyx.n@gmail.com">albyx.n@gmail.com</a></string>
    <string name="donations_link"><a href="https://pledgie.com/campaigns/30545">Donations</a></string>
    <string name="developed_by">Developed by Alberto Nicoletti</string>
    <string name="description_me">CS Student @University of Bologna</string>
    <string name="links">Links</string>
    <string name="async_http_link">http://loopj.com/android-async-http/</string>
    <string name="async_http_title">Android Asynchronous Http Client</string>
    <string name="apache_license">Apache License, Version 2.0</string>
    <string name="apache_license_link">https://www.apache.org/licenses/LICENSE-2.0</string>

    <string name="why_write_permissions">Need the permission to write in external storage to save files</string>

    <string name="font_size">Font Size</string>
    <string name="default_font_size">12</string>
    <string name="donations_description">The app is ad free, if you like it, a little donation would help me to maintain the server :D</string>
    <string name="confirm_save_title">Save File?</string>
    <string name="confirm_save_message">Do you want to save the changes?</string>
    <string name="executable">Executable</string>
    <string name="default_executable">pdflatex</string>
    <string name="default_server_address">http://compiler.latexit.illbe.xyz:1234/</string>
    <string name="tab_size">Tab Size</string>
    <string name="default_tab_size">2</string>

</resources>
